Add search keywords site-wide, Cluster Networking section, and pod/JVM deep dives
Search:
- Add a `keywords` frontmatter field (content.config.ts) injected as hidden,
  Pagefind-indexed text via a MarkdownContent override (delegates to
  starlight-blog's override so Field Notes still render their wrapper).
- Tune Pagefind ranking in astro.config.mjs for relevance breadth.
- Populate keywords across every docs section (troubleshooting, networking,
  workloads, architectures, stateful, operations, java/dotnet, controllers,
  helm, kubectl, observability, routing, start, tuning, ci, labs, blog, etc.).

New content:
- Cluster Networking (Internal Fabric) section: overview hub, Service CIDR &
  ClusterIP allocation/exhaustion, zone-aware trafficDistribution, NodeLocal
  DNSCache. Wired as a subsection under Networking & Routing.
- workloads/securing-pods-best-practices: action/audit-focused hardening
  playbook companion to the Pod Security reference.
- java/jattach-deep-dive: HotSpot dynamic attach in-cluster and bare-metal,
  plus JDK-free alternatives (SIGQUIT, on-OOM heap dump, Actuator, JMX, JFR).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>